// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui-elements-basic Components CarouselPicker should render with 4 siblings 1`] = `
.c0 {
  color: #text;
  outline: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 .item,
.c0 .nav {
  text-align: center;
  box-sizing: content-box;
  height: 1em;
  padding: 1px 3px;
  border-width: 2px 0;
  border-style: solid;
  border-color: transparent;
}

.c0 .item-before,
.c0 .item-after {
  color: #inactive;
}

.c0 .item-before:hover,
.c0 .item-after:hover {
  color: #text;
}

.c0 .item-current {
  font-weight: bold;
}

.c0:focus .item-current {
  border-bottom-color: #active;
}

.c0:hover .item-current {
  border-bottom-color: #active_hovered;
}

.c0 .nav.disabled {
  color: #inactive;
}

@media (hover:none),(hover:on-demand),(pointer:coarse) {
  .c0 .item-before,
  .c0 .item-after {
    pointer-events: none;
  }
}

<div
  className="CarouselPicker c0"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  onWheel={[Function]}
  tabIndex={0}
>
  <div
    className="item item-before"
    onClick={null}
  />
  <div
    className="item item-before"
    onClick={null}
  />
  <div
    className="item item-before"
    onClick={null}
  />
  <div
    className="item item-before"
    onClick={null}
  />
  <div
    className="item item-current"
  >
    <span>
      -
    </span>
  </div>
  <div
    className="item item-after"
    onClick={[Function]}
  >
    00
  </div>
  <div
    className="item item-after"
    onClick={[Function]}
  >
    01
  </div>
  <div
    className="item item-after"
    onClick={[Function]}
  >
    02
  </div>
  <div
    className="item item-after"
    onClick={[Function]}
  >
    03
  </div>
</div>
`;

exports[`ui-elements-basic Components CarouselPicker should render with default state 1`] = `
.c0 {
  color: #text;
  outline: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 .item,
.c0 .nav {
  text-align: center;
  box-sizing: content-box;
  height: 1em;
  padding: 1px 3px;
  border-width: 2px 0;
  border-style: solid;
  border-color: transparent;
}

.c0 .item-before,
.c0 .item-after {
  color: #inactive;
}

.c0 .item-before:hover,
.c0 .item-after:hover {
  color: #text;
}

.c0 .item-current {
  font-weight: bold;
}

.c0:focus .item-current {
  border-bottom-color: #active;
}

.c0:hover .item-current {
  border-bottom-color: #active_hovered;
}

.c0 .nav.disabled {
  color: #inactive;
}

@media (hover:none),(hover:on-demand),(pointer:coarse) {
  .c0 .item-before,
  .c0 .item-after {
    pointer-events: none;
  }
}

<div
  className="CarouselPicker c0"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  onWheel={[Function]}
  tabIndex={0}
>
  <div
    className="item item-before"
    onClick={null}
  />
  <div
    className="item item-before"
    onClick={null}
  />
  <div
    className="item item-before"
    onClick={null}
  />
  <div
    className="item item-current"
  >
    <span>
      -
    </span>
  </div>
  <div
    className="item item-after"
    onClick={[Function]}
  >
    00
  </div>
  <div
    className="item item-after"
    onClick={[Function]}
  >
    01
  </div>
  <div
    className="item item-after"
    onClick={[Function]}
  >
    02
  </div>
</div>
`;

exports[`ui-elements-basic Components CarouselPicker should render with empty item 1`] = `
.c0 {
  color: #text;
  outline: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 .item,
.c0 .nav {
  text-align: center;
  box-sizing: content-box;
  height: 1em;
  padding: 1px 3px;
  border-width: 2px 0;
  border-style: solid;
  border-color: transparent;
}

.c0 .item-before,
.c0 .item-after {
  color: #inactive;
}

.c0 .item-before:hover,
.c0 .item-after:hover {
  color: #text;
}

.c0 .item-current {
  font-weight: bold;
}

.c0:focus .item-current {
  border-bottom-color: #active;
}

.c0:hover .item-current {
  border-bottom-color: #active_hovered;
}

.c0 .nav.disabled {
  color: #inactive;
}

@media (hover:none),(hover:on-demand),(pointer:coarse) {
  .c0 .item-before,
  .c0 .item-after {
    pointer-events: none;
  }
}

<div
  className="CarouselPicker c0"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  onWheel={[Function]}
  tabIndex={0}
>
  <div
    className="item item-before"
    onClick={[Function]}
  >
    <span>
      -
    </span>
  </div>
  <div
    className="item item-before"
    onClick={[Function]}
  >
    00
  </div>
  <div
    className="item item-before"
    onClick={[Function]}
  >
    01
  </div>
  <div
    className="item item-current"
  >
    02
  </div>
  <div
    className="item item-after"
    onClick={[Function]}
  >
    03
  </div>
  <div
    className="item item-after"
    onClick={[Function]}
  >
    04
  </div>
  <div
    className="item item-after"
    onClick={[Function]}
  >
    05
  </div>
</div>
`;

exports[`ui-elements-basic Components CarouselPicker should render with icons (at the beginning) 1`] = `
.c0 {
  color: #text;
  outline: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 .item,
.c0 .nav {
  text-align: center;
  box-sizing: content-box;
  height: 1em;
  padding: 1px 3px;
  border-width: 2px 0;
  border-style: solid;
  border-color: transparent;
}

.c0 .item-before,
.c0 .item-after {
  color: #inactive;
}

.c0 .item-before:hover,
.c0 .item-after:hover {
  color: #text;
}

.c0 .item-current {
  font-weight: bold;
}

.c0:focus .item-current {
  border-bottom-color: #active;
}

.c0:hover .item-current {
  border-bottom-color: #active_hovered;
}

.c0 .nav.disabled {
  color: #inactive;
}

@media (hover:none),(hover:on-demand),(pointer:coarse) {
  .c0 .item-before,
  .c0 .item-after {
    pointer-events: none;
  }
}

<div
  className="CarouselPicker c0"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  onWheel={[Function]}
  tabIndex={0}
>
  <div
    className="item item-before"
    onClick={null}
  />
  <div
    className="item item-before"
    onClick={null}
  />
  <div
    className="item item-before"
    onClick={null}
  />
  <div
    className="nav nav-previous disabled"
    onClick={[Function]}
  >
    <span>
      +
    </span>
  </div>
  <div
    className="item item-current"
  >
    00
  </div>
  <div
    className="nav nav-next"
    onClick={[Function]}
  >
    <span>
      -
    </span>
  </div>
  <div
    className="item item-after"
    onClick={[Function]}
  >
    01
  </div>
  <div
    className="item item-after"
    onClick={[Function]}
  >
    02
  </div>
  <div
    className="item item-after"
    onClick={[Function]}
  >
    03
  </div>
</div>
`;

exports[`ui-elements-basic Components CarouselPicker should render with icons (at the beginning, circular) 1`] = `
.c0 {
  color: #text;
  outline: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 .item,
.c0 .nav {
  text-align: center;
  box-sizing: content-box;
  height: 1em;
  padding: 1px 3px;
  border-width: 2px 0;
  border-style: solid;
  border-color: transparent;
}

.c0 .item-before,
.c0 .item-after {
  color: #inactive;
}

.c0 .item-before:hover,
.c0 .item-after:hover {
  color: #text;
}

.c0 .item-current {
  font-weight: bold;
}

.c0:focus .item-current {
  border-bottom-color: #active;
}

.c0:hover .item-current {
  border-bottom-color: #active_hovered;
}

.c0 .nav.disabled {
  color: #inactive;
}

@media (hover:none),(hover:on-demand),(pointer:coarse) {
  .c0 .item-before,
  .c0 .item-after {
    pointer-events: none;
  }
}

<div
  className="CarouselPicker c0"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  onWheel={[Function]}
  tabIndex={0}
>
  <div
    className="item item-before"
    onClick={[Function]}
  >
    07
  </div>
  <div
    className="item item-before"
    onClick={[Function]}
  >
    08
  </div>
  <div
    className="item item-before"
    onClick={[Function]}
  >
    09
  </div>
  <div
    className="nav nav-previous"
    onClick={[Function]}
  >
    <span>
      +
    </span>
  </div>
  <div
    className="item item-current"
  >
    00
  </div>
  <div
    className="nav nav-next"
    onClick={[Function]}
  >
    <span>
      -
    </span>
  </div>
  <div
    className="item item-after"
    onClick={[Function]}
  >
    01
  </div>
  <div
    className="item item-after"
    onClick={[Function]}
  >
    02
  </div>
  <div
    className="item item-after"
    onClick={[Function]}
  >
    03
  </div>
</div>
`;

exports[`ui-elements-basic Components CarouselPicker should render with icons (at the end) 1`] = `
.c0 {
  color: #text;
  outline: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 .item,
.c0 .nav {
  text-align: center;
  box-sizing: content-box;
  height: 1em;
  padding: 1px 3px;
  border-width: 2px 0;
  border-style: solid;
  border-color: transparent;
}

.c0 .item-before,
.c0 .item-after {
  color: #inactive;
}

.c0 .item-before:hover,
.c0 .item-after:hover {
  color: #text;
}

.c0 .item-current {
  font-weight: bold;
}

.c0:focus .item-current {
  border-bottom-color: #active;
}

.c0:hover .item-current {
  border-bottom-color: #active_hovered;
}

.c0 .nav.disabled {
  color: #inactive;
}

@media (hover:none),(hover:on-demand),(pointer:coarse) {
  .c0 .item-before,
  .c0 .item-after {
    pointer-events: none;
  }
}

<div
  className="CarouselPicker c0"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  onWheel={[Function]}
  tabIndex={0}
>
  <div
    className="item item-before"
    onClick={[Function]}
  >
    06
  </div>
  <div
    className="item item-before"
    onClick={[Function]}
  >
    07
  </div>
  <div
    className="item item-before"
    onClick={[Function]}
  >
    08
  </div>
  <div
    className="nav nav-previous"
    onClick={[Function]}
  >
    <span>
      +
    </span>
  </div>
  <div
    className="item item-current"
  >
    09
  </div>
  <div
    className="nav nav-next disabled"
    onClick={[Function]}
  >
    <span>
      -
    </span>
  </div>
  <div
    className="item item-after"
    onClick={null}
  />
  <div
    className="item item-after"
    onClick={null}
  />
  <div
    className="item item-after"
    onClick={null}
  />
</div>
`;

exports[`ui-elements-basic Components CarouselPicker should render with icons (at the end, circular) 1`] = `
.c0 {
  color: #text;
  outline: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 .item,
.c0 .nav {
  text-align: center;
  box-sizing: content-box;
  height: 1em;
  padding: 1px 3px;
  border-width: 2px 0;
  border-style: solid;
  border-color: transparent;
}

.c0 .item-before,
.c0 .item-after {
  color: #inactive;
}

.c0 .item-before:hover,
.c0 .item-after:hover {
  color: #text;
}

.c0 .item-current {
  font-weight: bold;
}

.c0:focus .item-current {
  border-bottom-color: #active;
}

.c0:hover .item-current {
  border-bottom-color: #active_hovered;
}

.c0 .nav.disabled {
  color: #inactive;
}

@media (hover:none),(hover:on-demand),(pointer:coarse) {
  .c0 .item-before,
  .c0 .item-after {
    pointer-events: none;
  }
}

<div
  className="CarouselPicker c0"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  onWheel={[Function]}
  tabIndex={0}
>
  <div
    className="item item-before"
    onClick={[Function]}
  >
    06
  </div>
  <div
    className="item item-before"
    onClick={[Function]}
  >
    07
  </div>
  <div
    className="item item-before"
    onClick={[Function]}
  >
    08
  </div>
  <div
    className="nav nav-previous"
    onClick={[Function]}
  >
    <span>
      +
    </span>
  </div>
  <div
    className="item item-current"
  >
    09
  </div>
  <div
    className="nav nav-next"
    onClick={[Function]}
  >
    <span>
      -
    </span>
  </div>
  <div
    className="item item-after"
    onClick={[Function]}
  >
    00
  </div>
  <div
    className="item item-after"
    onClick={[Function]}
  >
    01
  </div>
  <div
    className="item item-after"
    onClick={[Function]}
  >
    02
  </div>
</div>
`;

exports[`ui-elements-basic Components CarouselPicker should render with icons (in the middle) 1`] = `
.c0 {
  color: #text;
  outline: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 .item,
.c0 .nav {
  text-align: center;
  box-sizing: content-box;
  height: 1em;
  padding: 1px 3px;
  border-width: 2px 0;
  border-style: solid;
  border-color: transparent;
}

.c0 .item-before,
.c0 .item-after {
  color: #inactive;
}

.c0 .item-before:hover,
.c0 .item-after:hover {
  color: #text;
}

.c0 .item-current {
  font-weight: bold;
}

.c0:focus .item-current {
  border-bottom-color: #active;
}

.c0:hover .item-current {
  border-bottom-color: #active_hovered;
}

.c0 .nav.disabled {
  color: #inactive;
}

@media (hover:none),(hover:on-demand),(pointer:coarse) {
  .c0 .item-before,
  .c0 .item-after {
    pointer-events: none;
  }
}

<div
  className="CarouselPicker c0"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  onWheel={[Function]}
  tabIndex={0}
>
  <div
    className="item item-before"
    onClick={null}
  />
  <div
    className="item item-before"
    onClick={[Function]}
  >
    00
  </div>
  <div
    className="item item-before"
    onClick={[Function]}
  >
    01
  </div>
  <div
    className="nav nav-previous"
    onClick={[Function]}
  >
    <span>
      +
    </span>
  </div>
  <div
    className="item item-current"
  >
    02
  </div>
  <div
    className="nav nav-next"
    onClick={[Function]}
  >
    <span>
      -
    </span>
  </div>
  <div
    className="item item-after"
    onClick={[Function]}
  >
    03
  </div>
  <div
    className="item item-after"
    onClick={[Function]}
  >
    04
  </div>
  <div
    className="item item-after"
    onClick={[Function]}
  >
    05
  </div>
</div>
`;

exports[`ui-elements-basic Components CarouselPicker should render with icons (in the middle, circular) 1`] = `
.c0 {
  color: #text;
  outline: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 .item,
.c0 .nav {
  text-align: center;
  box-sizing: content-box;
  height: 1em;
  padding: 1px 3px;
  border-width: 2px 0;
  border-style: solid;
  border-color: transparent;
}

.c0 .item-before,
.c0 .item-after {
  color: #inactive;
}

.c0 .item-before:hover,
.c0 .item-after:hover {
  color: #text;
}

.c0 .item-current {
  font-weight: bold;
}

.c0:focus .item-current {
  border-bottom-color: #active;
}

.c0:hover .item-current {
  border-bottom-color: #active_hovered;
}

.c0 .nav.disabled {
  color: #inactive;
}

@media (hover:none),(hover:on-demand),(pointer:coarse) {
  .c0 .item-before,
  .c0 .item-after {
    pointer-events: none;
  }
}

<div
  className="CarouselPicker c0"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  onWheel={[Function]}
  tabIndex={0}
>
  <div
    className="item item-before"
    onClick={[Function]}
  >
    09
  </div>
  <div
    className="item item-before"
    onClick={[Function]}
  >
    00
  </div>
  <div
    className="item item-before"
    onClick={[Function]}
  >
    01
  </div>
  <div
    className="nav nav-previous"
    onClick={[Function]}
  >
    <span>
      +
    </span>
  </div>
  <div
    className="item item-current"
  >
    02
  </div>
  <div
    className="nav nav-next"
    onClick={[Function]}
  >
    <span>
      -
    </span>
  </div>
  <div
    className="item item-after"
    onClick={[Function]}
  >
    03
  </div>
  <div
    className="item item-after"
    onClick={[Function]}
  >
    04
  </div>
  <div
    className="item item-after"
    onClick={[Function]}
  >
    05
  </div>
</div>
`;
